--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
     "react-player": "^2.7.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
