--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^2.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
